[tool.poetry]
name = "news-agg"
version = "0.1.0"
description = ""
authors = ["Michael Silveira <gravitypersists@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
